Edit div spacing

--- a/recipes/wendys-frosty.html
+++ b/recipes/wendys-frosty.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipies | Apple Crumb Pie</title>
+    <title>Recipies | Wendy's Chocolate Frosty</title>
 </head>
 <body>
-    <h1 id="header">How to Make Apple Crumb Pie!</h1>
+    <h1 id="header">How to the Wendy's Chocolate Frosty!</h1>
     <img src="../img/apple-crumb-pie.jpg" alt="picture of apple crumble pie" width="500">
-    <h2> Apple Crumb Pie</h2>
-    <p>A delicious and crunchy way of serving apple pie!</p>
+    <h2> Wendy's Chocolate Frosty</h2>
+    <p>How'd I get the recipe for this one? (DIY version of their chcolate frosty)</p>
     <div>
         <h3>Ingredients</h3>
         <ul>
