--- a/recipes/wendys-frosty.html
+++ b/recipes/wendys-frosty.html
@@ -7,40 +7,19 @@
 </head>
 <body>
     <h1 id="header">How to the Wendy's Chocolate Frosty!</h1>
-    <img src="../img/apple-crumb-pie.jpg" alt="picture of apple crumble pie" width="500">
+    <img src="../img/frosty.jpg" alt="picture of Wendy's frosty" width="500">
     <h2> Wendy's Chocolate Frosty</h2>
     <p>How'd I get the recipe for this one? (DIY version of their chcolate frosty)</p>
     <div>
         <h3>Ingredients</h3>
         <ul>
-            <li>6 cups thinly sliced apples</li>
-            <li>1 tablespoon lemon juice (Optional)</li>
-            <li>¾ cup white sugar</li>
-            <li>2 tablespoons all-purpose flour</li>
-            <li>½ teaspoon ground cinnamon</li>
-            <li>⅛ teaspoon ground nutmeg</li>
-            <li>½ cup raisins (Optional)</li>
-            <li>½ cup chopped walnuts (Optional)</li>
-            <li>1 (9 inch) pie shell</li>
-            <li>½ cup all-purpose flour</li>
-            <li>½ cup packed brown sugar</li>
-            <li>3 tablespoons butter</li>
+            
         </ul>
     </div>
     <div>
         <h3>Recipe Instructions</h3>
         <ol>
-            <li>Preheat the oven to 375 degrees F (190 degrees C).</li>
-            <li>Place sliced apples in a large bowl; sprinkle with lemon juice. 
-                Mix white sugar, 2 tablespoons flour, cinnamon, and nutmeg together in a small bowl; 
-                sprinkle mixture over apples and toss until evenly coated. 
-                Stir in raisins and walnuts; transfer mixture into pie shell.</li>
-            <li>Mix 1/2 cup flour and brown sugar together in a small bowl. 
-                Blend in butter with a fork until mixture is crumbly; sprinkle over apple filling. 
-                Cover top of pie loosely with aluminum foil.</li>
-            <li>Bake in the preheated oven for 25 minutes. 
-                Remove foil and bake until top is golden brown and filling is bubbly, about 25 to 30 minutes more. 
-                Cool on a wire rack before serving.</li>
+            
         </ol>
     </div>
     <a href="#header">Back to top</a>
