--- a/recipes/wendys-frosty.html
+++ b/recipes/wendys-frosty.html
@@ -13,13 +13,17 @@
     <div>
         <h3>Ingredients</h3>
         <ul>
-            
+            <li>2 cups chocolate milk</li>
+            <li>1 cup frozen whipped topping (do not thaw)</li>
+            <li>1/4 cup whole milk</li>
+            <li>1 tablespoon sweetened condensed milk</li>
         </ul>
     </div>
     <div>
         <h3>Recipe Instructions</h3>
         <ol>
-            
+            <li>Pour chocolate milk into ice cube trays and freeze until solid, at least 4 hours and up to 24.</li>
+            <li>Process frozen milk cubes, frozen whipped topping, whole milk, and sweetened condensed milk in a food processor until smooth. Serve immediately or freeze in an airtight container up to 1 week.</li>
         </ol>
     </div>
     <a href="#header">Back to top</a>
