Edit index.html content

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
     <h1>Odin Recipies</h1>
-    <img src="img/pancakes.jpg" alt="a stack of pancakes" width="300">
+    <img src="img/eating.gif" alt="gif of winnie the pooh getting ready to eat" width="300">
     <h2>What do we do here?</h2>
     <p>A site dedicated to all my favourite recipes. If something isn't listed here it's probably <strong> not </strong> one of my favourite foods.</p>
     <h2>Recipes</h2>
     <ol>
-        <li><a href="recipes/apple-pie.html"> Apple Crumb Pie</a></li>
-        <li><a href="recipes/corndogs.html"> Homemade Corndogs</a></li>
+        <li><a href="recipes/apple-pie.html">Apple Crumb Pie</a></li>
+        <li><a href="recipes/corndogs.html">Homemade Corndogs</a></li>
+        <li><a href="recipes/wendys-frosty.html">Wendy's Chocolate Frosty</a></li>
     </ol>
     <p></p>
     <p><em>Jaxkz | 2023</em></p>
