Edit wendys-frosty.html content

--- a/recipes/wendys-frosty.html
+++ b/recipes/wendys-frosty.html
@@ -6,9 +6,9 @@
     <title>Recipies | Wendy's Chocolate Frosty</title>
 </head>
 <body>
-    <h1 id="header">How to the Wendy's Chocolate Frosty!</h1>
+    <h1 id="header">How to Make the Wendy's Chocolate Frosty!</h1>
     <img src="../img/frosty.jpg" alt="picture of Wendy's frosty" width="500">
-    <h2> Wendy's Chocolate Frosty</h2>
+    <h2>Wendy's Chocolate Frosty</h2>
     <p>How'd I get the recipe for this one? (DIY version of their chcolate frosty)</p>
     <div>
         <h3>Ingredients</h3>
