--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipies Home</title>
+    <title>Recipes | Home</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Odin Recipies</h1>
-    <img src="img/eating.gif" alt="gif of winnie the pooh getting ready to eat" width="300">
-    <h2>What do we do here?</h2>
-    <p>A site dedicated to all my favourite recipes. If something isn't listed here it's probably <strong> not </strong> one of my favourite foods.</p>
-    <h2>Recipes</h2>
-    <ol>
-        <li><a href="recipes/apple-pie.html">Apple Crumb Pie</a></li>
-        <li><a href="recipes/corndogs.html">Homemade Corndogs</a></li>
-        <li><a href="recipes/wendys-frosty.html">Wendy's Chocolate Frosty</a></li>
-    </ol>
+    <h1 id="header">Odin Recipes </h1>
+    <img src="img/eating.gif" alt="gif of winnie the pooh getting ready to eat" width="400" id="img">
+    <h2 id="header-2">What do we do here?</h2>
+    <p class="para">A site dedicated to all my favourite recipes.</p>
+    <p class="para">If something isn't listed here it's probably <strong> not </strong> one of my favourite foods.</p>
+    <h2 id="header-2">Recipes</h2>
+    <div class="list">
+        <p><a href="recipes/apple-pie.html">Apple Crumb Pie</a></p>
+        <p><a href="recipes/corndogs.html">Homemade Corndogs</a></p>
+        <p><a href="recipes/wendys-frosty.html">Wendy's Chocolate Frosty</a></p>
+    </div>
     <p></p>
-    <p><em>Jaxkz | 2023</em></p>
+    <p><em class="footer">Jaxkz | 2023</em></p>
 </body>
 </html>
