Edit index.html and index.css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1 id="header">Odin Recipes </h1>
-    <img src="img/eating.gif" alt="gif of winnie the pooh getting ready to eat" width="400" id="img">
+    <img src="img/eating.gif" alt="gif of winnie the pooh getting ready to eat">
     <h2 id="header-2">What do we do here?</h2>
     <p class="para">A site dedicated to all my favourite recipes.</p>
     <p class="para">If something isn't listed here it's probably <strong> not </strong> one of my favourite foods.</p>
