Update index.html and index.css

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1 id="header">Odin Recipes </h1>
-    <img src="img/eating.gif" alt="gif of winnie the pooh getting ready to eat">
-    <h2 id="header-2">What do we do here?</h2>
-    <p class="para">A site dedicated to all my favourite recipes.</p>
-    <p class="para">If something isn't listed here it's probably <strong> not </strong> one of my favourite foods.</p>
-    <h2 id="header-2">Recipes</h2>
-    <div class="list">
-        <p><a href="recipes/apple-pie.html">Apple Crumb Pie</a></p>
-        <p><a href="recipes/corndogs.html">Homemade Corndogs</a></p>
-        <p><a href="recipes/wendys-frosty.html">Wendy's Chocolate Frosty</a></p>
+    <div class="container">
+        <h1>Odin Recipes</h1>
+        <img src="img/eating.gif" alt="gif of winnie the pooh getting ready to eat">
+        <div class="content">
+            <h2 id="header-2">What do we do here?</h2>
+            <p class="para">A site dedicated to all my favourite recipes.</p>
+            <p class="para">If something isn't listed here it's probably <strong> not </strong> one of my favourite foods.</p>
+            <h2>Recipes</h2>
+                <button><a href="recipes/apple-pie.html">Apple Crumb Pie</a></button>
+                <button><a href="recipes/corndogs.html">Homemade Corndogs</a></button>
+                <button><a href="recipes/wendys-frosty.html">Wendy's Chocolate Frosty</a></button>
+        </div>
     </div>
-    <p></p>
     <p><em class="footer">Jaxkz | 2023</em></p>
 </body>
 </html>
